# simple_G_ai_bot

./: .gitignore  README.md  app.py  benchmark.py  config.py  data_collector.py  dev_geoguessr_bot.ipynb  geo_bot.py  geoguesser_bot.py  geoguessr_bot.py  hf_chat.py  list_datasets.py  main.py  main_single_player.py  map_chrunch.txt  mapcrunch_controller.py  packages.txt  pyproject.toml  readme.md  requirements.txt  screen_regions.yaml  select_regions.py  view_data_collect.py
data/: golden_labels.json
datasets/asia/: golden_labels.json
datasets/example2/: golden_labels.json
datasets/example3/: golden_labels.json
