[project]
name = "simple-g-ai-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.10.10",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "anthropic==0.36.2",
    "anyio==4.6.2.post1",
    "asttokens==2.4.1",
    "attrs==24.2.0",
    "cachetools==5.5.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "colorama==0.4.6",
    "comm==0.2.2",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "debugpy==1.8.7",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "distro==1.9.0",
    "executing==2.1.0",
    "filelock==3.16.1",
    "fonttools==4.54.1",
    "frozenlist==1.4.1",
    "fsspec==2024.9.0",
    "google-ai-generativelanguage==0.6.10",
    "google-api-core==2.21.0",
    "google-api-python-client==2.149.0",
    "google-auth==2.35.0",
    "google-auth-httplib2==0.2.0",
    "google-generativeai==0.8.3",
    "googleapis-common-protos==1.65.0",
    "greenlet==3.1.1",
    "grpcio==1.67.0",
    "grpcio-status==1.67.0",
    "h11==0.14.0",
    "httpcore==1.0.6",
    "httplib2==0.22.0",
    "httpx==0.27.2",
    "huggingface-hub==0.26.0",
    "idna==3.10",
    "iprogress==0.4",
    "ipykernel==6.29.5",
    "ipython==8.28.0",
    "jedi==0.19.1",
    "jiter==0.6.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.7",
    "langchain==0.3.4",
    "langchain-anthropic==0.2.3",
    "langchain-core==0.3.12",
    "langchain-google-genai==2.0.1",
    "langchain-openai==0.2.3",
    "langchain-text-splitters==0.3.0",
    "langsmith==0.1.136",
    "matplotlib==3.9.2",
    "matplotlib-inline==0.1.7",
    "mouseinfo==0.1.3",
    "multidict==6.1.0",
    "nest-asyncio==1.6.0",
    "numpy==1.26.4",
    "openai==1.52.0",
    "opencv-python==4.10.0.84",
    "orjson==3.10.9",
    "packaging==24.1",
    "parso==0.8.4",
    "pillow==11.0.0",
    "platformdirs==4.3.6",
    "prompt-toolkit==3.0.48",
    "propcache==0.2.0",
    "proto-plus==1.24.0",
    "protobuf==5.28.2",
    "psutil==6.1.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pyautogui==0.9.54",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pygetwindow==0.0.9",
    "pygments==2.18.0",
    "pymsgbox==1.0.9",
    "pynput==1.7.7",
    "pyparsing==3.2.0",
    "pyperclip==1.9.0",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytweening==1.2.0",
    "pyyaml==6.0.2",
    "pyzmq==26.2.0",
    "regex==2024.9.11",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rsa==4.9",
    "selenium>=4.32.0",
    "six==1.16.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.36",
    "stack-data==0.6.3",
    "streamlit>=1.45.1",
    "tenacity==9.0.0",
    "tiktoken==0.8.0",
    "tokenizers==0.20.1",
    "tornado==6.4.1",
    "tqdm==4.66.5",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "uritemplate==4.1.1",
    "urllib3==2.2.3",
    "wcwidth==0.2.13",
    "yarl==1.15.5",
]
